--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -4,15 +4,27 @@ $title: #bb86fc;
 $text: #e3e3e3;
 $button: #03dac6;
 
+@import url("https://fonts.googleapis.com/css2?family=Ysabeau:ital,wght@0,1;0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,1;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");
+
 * {
   margin: 0px;
+  font-family: "Ysabeau", sans-serif;
+  font-weight: 600;
 }
 
 .App {
   display: flex;
   justify-content: center;
+  background-color: $background_bot;
+  color: $text;
+
   .container {
-    width: 1024px;
+    width: 800px;
+
+    .link {
+      text-decoration: none;
+      color: inherit;
+    }
 
     //LOGIN & REGISTER
     .auth {
@@ -77,10 +89,137 @@ $button: #03dac6;
       .container {
         padding: 8px 0px;
         display: flex;
+        align-items: center;
         justify-content: space-between;
+        background-color: $background_bot;
+        color: $text;
         .logo {
+          img {
+            width: 88px;
+          }
         }
         .links {
+          display: flex;
+          align-items: center;
+          gap: 8px;
+
+          h6 {
+            font-size: 16px;
+            font-weight: 300;
+          }
+
+          span {
+            cursor: pointer;
+          }
+
+          .write {
+            background-color: $title;
+            color: $background_bot;
+            width: 46px;
+            height: 46px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: solid 1px $title;
+
+            &:hover {
+              background-color: $background_bot;
+              color: $title;
+            }
+
+            a {
+              font-weight: 300;
+            }
+          }
+        }
+      }
+    }
+
+    //FOOTER
+    footer {
+      margin-top: 96px;
+      padding: 18px;
+      background-color: $background_bot;
+      color: $text;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 12px;
+
+      img {
+        height: 48px;
+      }
+    }
+
+    //HOMEPAGE
+    .home {
+      background-color: $background_bot;
+      .posts {
+        margin-top: 48px;
+        display: flex;
+        flex-direction: column;
+        gap: 144px;
+
+        .post {
+          display: flex;
+          gap: 96px;
+
+          &:nth-child(2n + 1) {
+            flex-direction: row-reverse;
+          }
+
+          .img {
+            flex: 2;
+            position: relative;
+            z-index: 2;
+
+            &::after {
+              content: "";
+              width: 100%;
+              height: 100%;
+              background-color: $title;
+              position: absolute;
+              top: 16px;
+              left: -16px;
+              z-index: -1;
+            }
+
+            img {
+              width: 100%;
+              max-height: 400px;
+              object-fit: cover;
+            }
+          }
+
+          .content {
+            flex: 3;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            h1 {
+              font-size: 48px;
+            }
+
+            p {
+              font-size: 18px;
+            }
+
+            button {
+              width: max-content;
+              padding: 8px 24px;
+              cursor: pointer;
+              background-color: $background_bot;
+              border: solid 1px $title;
+              color: $title;
+
+              &:hover {
+                background-color: $title;
+                color: $background_top;
+              }
+            }
+          }
         }
       }
     }
