--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -38,6 +38,7 @@ $button: #03dac6;
       h1 {
         text-transform: uppercase;
         font-size: 24px;
+        line-height: 24px;
         color: $title;
         margin-bottom: 18px;
       }
@@ -200,6 +201,7 @@ $button: #03dac6;
 
             h1 {
               font-size: 48px;
+              line-height: 48px;
             }
 
             p {
@@ -221,6 +223,119 @@ $button: #03dac6;
             }
           }
         }
+      }
+    }
+
+    //SINGLE
+    .single {
+      display: flex;
+      gap: 48px;
+
+      .content {
+        flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+
+        img {
+          width: 100%;
+          height: 296px;
+          object-fit: cover;
+        }
+
+        .user {
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          font-size: 14px;
+
+          img {
+            width: 48px;
+            height: 48px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          span {
+            font-weight: bold;
+          }
+        }
+
+        .edit {
+          display: flex;
+          gap: 4px;
+
+          img {
+            width: 24px;
+            height: 24px;
+            cursor: pointer;
+          }
+        }
+
+        h1 {
+          font-size: 42px;
+          line-height: 42px;
+        }
+
+        p {
+          text-align: justify;
+          line-height: 24px;
+        }
+      }
+
+      .menu {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+
+        h1 {
+          font-size: 20px;
+        }
+
+        .post {
+          display: flex;
+          flex-direction: column;
+          gap: 8px;
+
+          img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+          }
+
+          button {
+            width: max-content;
+            padding: 8px 24px;
+            cursor: pointer;
+            background-color: $background_bot;
+            border: solid 1px $title;
+            color: $title;
+
+            &:hover {
+              background-color: $title;
+              color: $background_top;
+            }
+          }
+        }
+      }
+    }
+
+    //WRITE
+    .write {
+      margin-top: 16px;
+      display: flex;
+      gap: 16px;
+
+      .content {
+        flex: 5;
+      }
+
+      .menu {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
       }
     }
   }
