--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -322,13 +322,22 @@ $button: #03dac6;
     }
 
     //WRITE
-    .write {
+    .add {
       margin-top: 16px;
       display: flex;
       gap: 16px;
 
       .content {
         flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        input {
+          padding: 8px;
+          border: 1px solid $title;
+          background-color: $background_bot;
+        }
       }
 
       .menu {
